--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@
     /*背景色*/
     color: #FFF;
     /*文字色*/
+    opacity: 0;
+    transition: 5s;
 }
 
 .ribbon::after {
@@ -73,17 +75,15 @@ p {
 }
 
 .swiper {
-    width: 600px;
-    height: 600px;
+    width: 650px;
+    height: auto;
+    overflow: visible;
 }
 
 .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .swiper-slide img {
@@ -91,4 +91,29 @@ p {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.swiper-pagination {
+    bottom: -21px !important;
+}
+
+
+body {
+    width: 70%;
+    margin: 5rem auto;
+}
+
+.btn-square {
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #668ad8;
+    color: #FFF;
+    border-bottom: solid 4px #627295;
+    border-radius: 3px;
+}
+.btn-square:active {
+    /*ボタンを押したとき*/
+    transform: translateY(4px);/*下に動く*/
+    border-bottom: none;/*線を消す*/
 }
